--- a/style.scss
+++ b/style.scss
@@ -86,8 +86,11 @@ main {}
   }
 }
 p {
+  font-size: 21px;
+  font-variant: small-caps;
   margin: 0;
   padding: 5px 7px;
+  text-align: center;
 }
 #previous{
   clear: both;
