--- a/style.scss
+++ b/style.scss
@@ -9,9 +9,12 @@ h2 {
   font-weight: 600;
   color: rgb(51, 51, 51);
   margin-left: 7px;
-  font-size: 18px;
+  font-size: 1.2em;
   margin-bottom: 3px;
   font-variant: small-caps;
+  &::before{
+    content: "// "
+  }
 }
 
 body, h1, h2, h3, h4, h5 {font-family: "Open sans",sans-serif;}
@@ -22,9 +25,10 @@ body {
   padding: 0;
   margin: 0;
   height: 100%;
+  font-size: 16px;
 }
 header {
-  height: 90px;
+  height: 5.6em;
   width: 100%;
   padding: 10px;
   background-color: #333;
@@ -34,17 +38,17 @@ header {
   background-size: 100%;
   >img {
     display: inline;
-    height: 50px;
+    height: 3.1em;
     position: absolute;
     right: 16px;
-    top: 24px;
+    top: 1.5em;
   }
   >h1 {
     color: #fff;
-    font-size: 45px;
+    font-size: 2.8em;
     font-variant: small-caps;
     font-weight: 100;
-    margin: 17px 12px 0 0;
+    margin: 0.4em 12px 0 0;
     display: inline-block;
   }
   style {color: #ccc}
@@ -54,41 +58,42 @@ header {
 }
 main {}
 #infos {
+  svg {
+    width: 2.6em;
+    height: 1.2em;
+  }
+  span{
+    font-size: 1em;
+    display: block;
+    font-variant: small-caps;
+    text-align: center;
+  }
   #countdown{
     padding-right: 15px;
-    >div {
-      width: 75px;
-    }
+    >div {width: 4em;font-size: 1em !important;}
+    >div>div{font-size: 3em !important;}
   }
   >div {
+    border-left: 1px solid #ccc;
+    padding:7px 12px 0 10px;
     display: inline-block;
     float: left;
     >div {
       display: inline-block;
       text-align: center;
-      span{
-        display: block;
-        font-variant: small-caps;
-      }
+      font-size: 2em;
       div:last-of-type{
-        height: 50px;
-        font-size: 50px;
+        height: 1em;
+        font-size: 2em;
         line-height: 1;
       }
     }
   }
-  .next>div{
-    border-left: 1px solid #ccc;
-    padding-left: 15px;
-    padding-right: 12px;
-    >div{
-      line-height:50px !important;
-      font-size:38px!important;
-    }
-  }
+
 }
+
 p {
-  font-size: 21px;
+  font-size: 1.3em;
   font-variant: small-caps;
   margin: 0;
   padding: 5px 7px;
@@ -101,7 +106,7 @@ p {
   b {
     color: rgb(160, 160, 160);
     font-style: oblique;
-    font-size: 15px;
+    font-size: 1em;
     margin-left: 8px;
   }
   #reverse{
@@ -119,7 +124,7 @@ p {
   align-content: stretch;
   display: flex;
   flex-direction: row;
-  min-height: 400px;
+  min-height: 25em;
   overflow-x: scroll;
   border-top: 2px solid #a7a9ac;
   padding-top: 5px;
@@ -130,38 +135,42 @@ p {
   align-self: stretch;
   display: flex;
   flex-direction: column;
-  min-width: 86px;
+  min-width: 5.6em;
   .destination {
     align-content: stretch;
     justify-content: center;
     display: flex;
     flex: 1 0 0;
-    min-height: 120px;
-    margin-bottom: 5px;
+    margin: 5px 0;
+    min-height: 5em;
+    svg{
+      width:5.6em;
+      height:2.8em;
+    }
   }
   .name, .outcome {
     text-align: center;
     overflow: hidden;
-    font-size: 10px;
+    font-size: 0.7em;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .name{
     padding-top: 10px;
-    height: 25px;
+    height: 2.8em;
     margin-bottom: 5px;
   }
   .outcome{
     padding-bottom: 10px;
-    height: 30px;
+    height: 4em;
     >span{padding: 2px 4px;}
   }
   .landing>span{
     background-color: #efefef;
     border: 1px solid;
     border-radius: 10px;
-    min-width: 70px;
+    min-width: 4.4em;
   }
 }
 
@@ -179,6 +188,9 @@ p {
   justify-content: center;
   display: flex;
   flex: 1 0 0;
+  svg{
+    width: 3.1em
+  }
 }
 
 .falcon1 {border-bottom: 5px solid #b4b4b4;}
@@ -188,7 +200,7 @@ p {
 
 #labels > span {
   display: block;
-  font-size: 15px;
+  font-size: 1em;
   font-weight: 600;
   margin-left: 23px;
   text-transform: uppercase;
@@ -199,7 +211,7 @@ p {
 }
 
 footer {
-  font-size: 13px;
+  font-size: 0.8em;
   font-weight: 100;
   padding: 6px;
   a {color: #333;}
@@ -211,13 +223,17 @@ footer {
     align-items: flex-end;
     align-content: stretch;
     justify-content: center;
-    min-height: 47px;
     margin-bottom: 5px;
+    min-height: inherit;
   }
 }
 
 @media (max-width: 850px) {
   header > img, .github {display: none;}
+}
+@media (max-width: 400px) {
+  body{font-size: 12px;}
+  #previous>b{display: block}
 }
 @media (max-width: 1100px) {
   header > span {display: none;}
