--- a/style.scss
+++ b/style.scss
@@ -91,12 +91,12 @@ main {
     border-width: 2px 1px 1px;
     display: inline-block;
     margin: 5px 10px 0;
+    text-align: center;
   }
   >div>div {
     border-left: 1px dashed $border;
     padding:7px 12px 0 10px;
     display: inline-block;
-    float: left;
     &:first-of-type {border-left: 0;}
     >div {
       display: inline-block;
@@ -268,6 +268,9 @@ footer {
 @media (max-width: 850px) {
   header > img, .github {display: none;}
 }
+@media (max-width: 580px) {
+  #previous b {display: block;}
+}
 @media (max-width: 400px) {
   #infos > div {margin: 0;}
   header {padding: 0 0 0 5px;}
@@ -276,5 +279,13 @@ footer {
 }
 @media (max-width: 1100px) {
   main {margin: 0;}
-  header > span {display: none;}
+  header{
+    padding: 10px;
+    text-align: center;
+    overflow: hidden;
+    height: 4.5em;
+    > img {margin-top: 0;}
+    > span {display: none;}
+    > h1 {margin: 0;}
+  }
 }
