--- a/style.scss
+++ b/style.scss
@@ -68,6 +68,11 @@ main {
   text-align: center;
   p {
     color: #fff;
+    font-size: 1.3em;
+    font-variant: small-caps;
+    margin: 0;
+    padding: 5px 7px;
+    text-align: center;
     a {color: $border;}
   }
   svg {
@@ -134,13 +139,6 @@ main {
   cursor: pointer;
 }
 
-p {
-  font-size: 1.3em;
-  font-variant: small-caps;
-  margin: 0;
-  padding: 5px 7px;
-  text-align: center;
-}
 #previous{
   clear: both;
   padding-top: 14px;
@@ -308,6 +306,28 @@ table {
   transform-origin: left top 0;
   width: .1em;
   color: $border;
+}
+
+.infos {
+  color: #fff;
+  padding: 7px 0;
+  &:after {
+    visibility: hidden;
+  	display: block;
+  	content: "";
+  	clear: both;
+  	height: 0;
+  }
+  >div {
+    display: inline-block;
+    float: left;
+    border-right: 1px dashed $border;
+    padding: 0 10px;
+    &:last-of-type {border-right: 0;}
+  }
+  h2 {margin-bottom: 16px;}
+  p {padding-left: 30px;}
+  a {color: #fff;}
 }
 
 footer {
