--- a/style.scss
+++ b/style.scss
@@ -229,6 +229,10 @@ main {
     border-radius: 10px;
     min-width: 4.4em;
   }
+  .patch {
+    align-self: center;
+    margin-bottom: 10px;
+  }
 }
 
 #flights-container, table {
