Move images and cache

--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ body, h1, h2, h3, h4, h5 {font-family:-apple-system,system-ui,BlinkMacSystemFont
 
 html {height: 100%;}
 body {
-  background: $bg url('bg.jpg') repeat fixed 0 0 / 2560px 200px;
+  background: $bg url('img/bg.jpg') repeat fixed 0 0 / 2560px 200px;
   padding: 0;
   margin: 0;
   height: 100%;
